add CSV import hint